--- a/desafio-01-backend/pom.xml
+++ b/desafio-01-backend/pom.xml
@@ -47,6 +47,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>1.18.32</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -58,18 +59,18 @@
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<annotationProcessorPaths>
-						<path>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</path>
-					</annotationProcessorPaths>
-				</configuration>
-			</plugin>
+<!--			<plugin>&ndash;&gt;
+&lt;!&ndash;				<groupId>org.apache.maven.plugins</groupId>&ndash;&gt;
+&lt;!&ndash;				<artifactId>maven-compiler-plugin</artifactId>&ndash;&gt;
+&lt;!&ndash;				<configuration>&ndash;&gt;
+&lt;!&ndash;					<annotationProcessorPaths>&ndash;&gt;
+&lt;!&ndash;						<path>&ndash;&gt;
+&lt;!&ndash;							<groupId>org.projectlombok</groupId>&ndash;&gt;
+&lt;!&ndash;							<artifactId>lombok</artifactId>&ndash;&gt;
+&lt;!&ndash;						</path>&ndash;&gt;
+&lt;!&ndash;					</annotationProcessorPaths>&ndash;&gt;
+&lt;!&ndash;				</configuration>&ndash;&gt;
+&lt;!&ndash;			</plugin>-->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
