--- a/desafio-01-backend/src/main/resources/application.properties
+++ b/desafio-01-backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=desafio-01
+spring.datasource.url=jdbc:postgresql://localhost:5432/tarefas_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
